update esconder perfil
